--- a/feitosa/style.css
+++ b/feitosa/style.css
@@ -8,6 +8,8 @@ body {
     margin-left: auto;
     margin-right: auto;
     padding: 30px;
+    padding-bottom: 55px;
+    padding-top: 10px;
     background-color: white;
     border-radius: 5px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
@@ -24,7 +26,7 @@ h1, h2, h3 {
 }
 
 #stats > div, #budget > div {
-    width: 48%;
+    width: 47%;
     background-color: #f0f0f0;
     padding: 10px;
     border-radius: 5px;
