--- a/feitosa/style.css
+++ b/feitosa/style.css
@@ -3,16 +3,18 @@ body {
     background-color: #f0f0f0;
 }
 
-.main {
+#main {
     width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 30px;
-    padding-bottom: 55px;
-    padding-top: 10px;
+    margin: 0px auto;
+    padding: 10px;
     background-color: white;
     border-radius: 5px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+    border: 1px solid black
+}
+
+header {
+    border: 1px solid black
 }
 
 h1, h2, h3 {
@@ -22,13 +24,11 @@ h1, h2, h3 {
 #stats, #budget {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 20px;
 }
 
 #stats > div, #budget > div {
     width: 47%;
     background-color: #f0f0f0;
-    padding: 10px;
     border-radius: 5px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
 }
@@ -38,8 +38,6 @@ h1, h2, h3 {
 }
 
 button {
-    padding: 10px;
-    margin-bottom: 10px;
     background-color: rgb(50,50,50);
     color: white;
     border: none;
