--- a/feitosa/style.css
+++ b/feitosa/style.css
@@ -1,58 +1,63 @@
 body {
-    font-family: 'Arial';
-    background-color: #f0f0f0;
+    background: lightgray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
-#main {
-    width: 80%;
-    margin: 0px auto;
-    padding: 10px;
-    background-color: white;
+main {
+    background: white;
     border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
-    border: 1px solid black
+    width: 80vw;
+    max-width: 800px;
+    padding: 20px;
 }
 
-header {
-    border: 1px solid black
+#stats, #budget{
+    display: flex;
+    gap: 20px;
+}
+#stats div {
+    background-color: rgb(243, 243, 243);
+    border-radius: 5px;
+    border: 1px solid lightgray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 20px;
+    flex: 1;
+}
+#stats div:first-of-type {
+    border-radius: 50%;
+    background-color: rgb(35, 35, 35);
+    color: whitesmoke;
+    flex: 0.5
 }
 
-h1, h2, h3 {
-    color: #333;
+#budget div {
+    background-color: rgb(243, 243, 243);
+    border-radius: 5px;
+    border: 1px solid lightgray;
+    padding: 20px;
+    flex: 1;
 }
 
-#stats, #budget {
+#buttons {
     display: flex;
     justify-content: space-between;
 }
 
-#stats > div, #budget > div {
-    width: 47%;
-    background-color: #f0f0f0;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+#game_buttons button:first-of-type {
+    background-color: rgb(255, 50, 50);
+    color: whitesmoke;
 }
 
-.slider {
+input {
     width: 100%;
 }
 
-button {
-    background-color: rgb(50,50,50);
-    color: white;
-    border: none;
-    border-radius: 5px;
+input:hover {
     cursor: pointer;
-}
-
-button:hover {
-    background-color: rgb(100,100,100);
-}
-
-#game_buttons {
-    float: left;
-}
-
-#state_buttons {
-    float: right
 }
